--- a/templates/default/pool.d/www.conf.erb
+++ b/templates/default/pool.d/www.conf.erb
@@ -41,8 +41,8 @@ listen = <%= node['php-fpm']['www']['listen'] %>
 ; BSD-derived systems allow connections regardless of permissions.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0666
-;listen.owner = <%= node['php-fpm']['www']['listen.owner'] %>
-;listen.group = <%= node['php-fpm']['www']['listen.group'] %>
+listen.owner = <%= node['php-fpm']['www']['listen.owner'] %>
+listen.group = <%= node['php-fpm']['www']['listen.group'] %>
 ;listen.mode = <%= node['php-fpm']['www']['listen.mode'] %>
 
 ; List of ipv4 addresses of FastCGI clients which are allowed to connect.
